syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "entities/consigment.proto";

option go_package = "github.com/HoangLong2502/pharmago_be/pb";

message ConsignmentListRequest {
  int32 company = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    description: "int32 value field",
    required: [
      "company"
    ],
  }];
  optional int32 warehouse = 2;
  optional string search = 3;
  optional int32 page = 4;
  optional int32 limit = 5;
  optional bool available = 6;
}

message ConsignmentListResponse {
  int32 code = 1;
  string message = 2;
  repeated Consignment details = 3;
}