syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "entities/ticket.proto";

option go_package = "github.com/HoangLong2502/pharmago_be/pb";

message TicketListRequest {
  int32 company = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    description: "int32 value field",
    required: [
      "company"
    ],
  }];
  int32 warehouse = 2;
  optional string search = 3;
  optional int32 page = 4;
  optional int32 limit = 5;
}

message TicketListResponse {
  int32 code = 1;
  string message = 2;
  repeated TicketPreview details = 3;
}