syntax = "proto3";

package pb;

import "entities/warehouse.proto";
import "entities/ticket.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/HoangLong2502/pharmago_be/pb";

message TicketDetailRequest {
  int32 id = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    description: "int32 value field",
    required: [
      "id"
    ],
  }];
}

message TicketDetailResponse {
  int32 code = 1;
  string message = 2;
  Ticket details = 3;
}